Add new chickens to list

--- a/index.css
+++ b/index.css
@@ -1,7 +1,29 @@
-body {
+section {
   padding: 50px;
 }
 
-button .addNew {
-    font-size: 10px;
+header {
+  position: relative;
+  text-align: center;
+  background-image: url("chickens.jpg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+
+h1 {
+  font-family: "Barrio", cursive;
+  color: white;
+  font-size: 4em;
+  text-shadow: -3px -5px black;
+}
+
+h2 {
+  font-family: 'Shadows into Light', cursive;
+  text-align: center;
+}
+
+button.addNew {
+  padding: 15px 40px;
+  border: solid 1px black;
 }
